--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,13 +8,24 @@ logging.level.org.springframework.web=INFO
 logging.level.org.hibernate=ERROR
 
 #data setting
-spring.datasource.url=jdbc:mysql://localhost:3306/springboot
-spring.datasource.username=root
-spring.datasource.password=123456
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.show-sql= true
+
+spring.datasource.springboot.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.springboot.url=jdbc:mysql://localhost:3306/springboot
+spring.datasource.springboot.username=root
+spring.datasource.springboot.password=123456
+
+
+spring.datasource.springbootback.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.springbootback.url=jdbc:mysql://localhost:3306/springboot2
+spring.datasource.springbootback.username=root
+spring.datasource.springbootback.password=123456
+
+# mybatis setting
+mybatis.config-locations=classpath:mybatis/mybatis-config.xml
+#mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
 
 #redis setting
 # REDIS (RedisProperties)
@@ -37,6 +48,3 @@ spring.redis.pool.min-idle=0
 # \u8FDE\u63A5\u8D85\u65F6\u65F6\u95F4\uFF08\u6BEB\u79D2\uFF09
 spring.redis.timeout=0
 
-# mybatis setting
-mybatis.config-locations=classpath:mybatis/mybatis-config.xml
-mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
