--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -48,3 +48,14 @@ spring.redis.pool.min-idle=0
 # \u8FDE\u63A5\u8D85\u65F6\u65F6\u95F4\uFF08\u6BEB\u79D2\uFF09
 spring.redis.timeout=0
 
+# mail setting
+#\u90AE\u7BB1\u670D\u52A1\u5668\u5730\u5740
+spring.mail.host=smtp.qiye.163.com
+#\u7528\u6237\u540D
+spring.mail.username=xxx@oo.com
+#\u5BC6\u7801
+spring.mail.password=xxyyooo
+spring.mail.default-encoding=UTF-8
+#\u4EE5\u8C01\u6765\u53D1\u9001\u90AE\u4EF6
+mail.fromMail.addr=xxx@oo.com
+
